src/test/deca/context/invalid/created/rule3.41/inhexist.deca
// Résultat erreur:
//    Appel de méthode inexistante sur un objet (règle 3.41)
//
// Description:
//    Tests de programme incorrect contextuellement (appel de méthode inexistante)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int uneAutreMethode() {
        MaClasse obj = new MaClasse();
        return obj.methodeInexistante();
    }
}
